crates/bcp-tests/tests/snapshots/conformance__with_summaries_minimal.snap
---
source: crates/bcp-tests/tests/conformance.rs
expression: output
---
--- server.py [python] ---
import asyncio

async def serve():
    pass

--- ripgrep [ok] ---
src/main.rs:42: ConnectionPool::new()
